# 2025_20723145

./: .gitignore  README.md  adder_8h.html  adder_8h_source.html  files.html  git-cheat-sheet.txt  index.html
.github/workflows/: doxygen-deploy.yml
Worksheet 7/Exercise 34/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  Sphere.stl  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  seconddialog.cpp
Worksheet4/Calc/: CMakeLists.txt  adder.h  calc.cpp
Worksheet4/hello_cmake/: CMakeLists.txt  hello.cpp
Worksheet5/: Doxyfile  adder.h  calc.cpp
Worksheet6/untitled/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  seconddialog.h  seconddialog.ui
Worksheet6/untitled/.qtcreator/: CMakeLists.txt.user.2cd35f3
